2009-09-11  Noel O'Boyle  <baoilleach@gmail.com>

	* src/GUI/CMakeLists.txt: Added Win32 to ensure that on Windows
	a command-line application was not created.

2009-09-11  Noel O'Boyle  <baoilleach@gmail.com>

	* src/GUI/*.h, *.cpp: Large number of minor mods for compatibility with unicode build of wxWidgets
	* CMakeLists.txt, src/GUI/CMakeLists.txt, tools/CMakeLists.txt: (1) Cmakeify the GUI build, (2) Add an option to
	enable a minimal build, consisting of just two file formats and one tool.

2009-09-06  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Fix Random & Systematic Rotor Search crashes. 
        (Fixes crashes in Avogadro here on 64bit)

2009-09-01  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/parsmarts.cpp: Some bug fixes to SMARTS with stereochemical atoms.

2009-08-31  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/parsmarts.cpp: First attempt to make smarts work again. Should be
        working for tetrahedral stereochemistry. Cis/Trans may still need some
        more code.


2009-08-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/fingerprint.cpp, include/openbabel/fingerprint.h,
	src/formats/fastsearchformat.cpp: Patches from Izhar Wallach for a
	similarity search within a range (e.g. Tanimoto from 0.6-0.8).

2009-08-21  Craig James <cjames@emolecules.com>

	* src/kekulize.cpp, include/openbabel/mol.h: Rewrote
	expand_kekule() in kekulize.cpp, making it much simpler to
	understand.  Original algorithm had bugs and was very hard to
	follow.

	* src/formats/mdlformat.cpp: Replaced atoi(), which would
	incorrectly accept some invalid numbers, with a custom function
	that catches most invalid numbers.  Fixed several bugs that caused
	core dumps for unusual or incorrectly-formatted SD files.
	Improved a couple of error messages.  Commented out one section
	that was supposed to read R-group definitions; the code was
	plainly wrong and caused core dumps, but the MDL spec is complex